C'de int Değişkeni

--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="degiskenlerr.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="degiskenler.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
