--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="c-cpp-program.cpp" />
+    <ClCompile Include="degiskenler-2.c" />
     <ClCompile Include="degiskenler-2.cpp" />
     <ClCompile Include="degiskenler.c" />
     <ClCompile Include="degiskenlerr.cpp" />
