--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="degiskenler-2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="degiskenler-2.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
