C | float, double veri tipi

--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="c-cpp-program.cpp" />
     <ClCompile Include="degiskenler-2.c" />
     <ClCompile Include="degiskenler-2.cpp" />
+    <ClCompile Include="degiskenler-3.c" />
     <ClCompile Include="degiskenler-3.cpp" />
     <ClCompile Include="degiskenler.c" />
     <ClCompile Include="degiskenlerr.cpp" />
