--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="degiskenler-3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="degiskenler-3.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
