--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
@@ -21,34 +21,34 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="c-cpp-program.cpp">
+    <ClCompile Include="Programlamaya Giriş\c-cpp-program.cpp">
       <Filter>Source Files\Programlamaya Giriş</Filter>
     </ClCompile>
-    <ClCompile Include="degiskenler.c">
+    <ClCompile Include="Programlamaya Giriş\degiskenler.c">
       <Filter>Source Files\Programlamaya Giriş</Filter>
     </ClCompile>
-    <ClCompile Include="degiskenler-2.c">
+    <ClCompile Include="Programlamaya Giriş\degiskenler-2.c">
       <Filter>Source Files\Programlamaya Giriş</Filter>
     </ClCompile>
-    <ClCompile Include="degiskenler-2.cpp">
+    <ClCompile Include="Programlamaya Giriş\degiskenler-2.cpp">
       <Filter>Source Files\Programlamaya Giriş</Filter>
     </ClCompile>
-    <ClCompile Include="degiskenler-3.c">
+    <ClCompile Include="Programlamaya Giriş\degiskenler-3.c">
       <Filter>Source Files\Programlamaya Giriş</Filter>
     </ClCompile>
-    <ClCompile Include="degiskenler-3.cpp">
+    <ClCompile Include="Programlamaya Giriş\degiskenler-3.cpp">
       <Filter>Source Files\Programlamaya Giriş</Filter>
     </ClCompile>
-    <ClCompile Include="degiskenlerr.cpp">
+    <ClCompile Include="Programlamaya Giriş\degiskenlerr.cpp">
       <Filter>Source Files\Programlamaya Giriş</Filter>
     </ClCompile>
-    <ClCompile Include="ilk-cpp-program.cpp">
+    <ClCompile Include="Programlamaya Giriş\ilk-cpp-program.cpp">
       <Filter>Source Files\Programlamaya Giriş</Filter>
     </ClCompile>
-    <ClCompile Include="ilk-c-program.c">
+    <ClCompile Include="Programlamaya Giriş\ilk-c-program.c">
       <Filter>Source Files\Programlamaya Giriş</Filter>
     </ClCompile>
-    <ClCompile Include="deneme.c">
+    <ClCompile Include="Koşul İfadeleri\deneme.c">
       <Filter>Source Files\Koşullu İfadeler</Filter>
     </ClCompile>
   </ItemGroup>
