--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Programlamaya Giriş\artirma-azaltma.cpp" />
     <ClCompile Include="Programlamaya Giriş\c-cpp-program.cpp" />
     <ClCompile Include="Programlamaya Giriş\c-veri-girisi.c" />
     <ClCompile Include="Programlamaya Giriş\cpp-veri-girisi.cpp" />
