--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="Koşul İfadeleri\deneme.c" />
     <ClCompile Include="Programlamaya Giriş\ilk-c-program.c" />
     <ClCompile Include="Programlamaya Giriş\ilk-cpp-program.cpp" />
+    <ClCompile Include="Programlamaya Giriş\karsilastirma-operatorleri.cpp" />
     <ClCompile Include="Programlamaya Giriş\operatorler.cpp" />
     <ClCompile Include="Programlamaya Giriş\ornek.c" />
     <ClCompile Include="Programlamaya Giriş\ornek.cpp" />
