--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
@@ -87,5 +87,8 @@
     <ClCompile Include="Koşul İfadeleri\vize-final-ortalama.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Koşul İfadeleri\switch-case.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
