--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
@@ -90,5 +90,8 @@
     <ClCompile Include="Koşul İfadeleri\switch-case.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Koşul İfadeleri\switch-case-2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
