Fibonacci Sayı Dizisi

--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
@@ -102,5 +102,8 @@
     <ClCompile Include="Programlamaya Giriş\tip-donusum.cpp">
       <Filter>Source Files\Programlamaya Giriş</Filter>
     </ClCompile>
+    <ClCompile Include="Döngüler\fibonacci-sayi-dizisi.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
