--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="Döngüler\fibonacci-sayi-dizisi.cpp" />
     <ClCompile Include="Döngüler\for-dongusu.cpp" />
     <ClCompile Include="Döngüler\for-ornekleri.cpp" />
+    <ClCompile Include="Döngüler\mukemmel-sayi.cpp" />
     <ClCompile Include="Döngüler\sayi-tahmin-oyunu.cpp" />
     <ClCompile Include="Döngüler\while-dongusu.cpp" />
     <ClCompile Include="Koşul İfadeleri\if-else.cpp" />
