--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
@@ -126,5 +126,8 @@
     <ClCompile Include="Döngüler\n-elemanli-seri.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Döngüler\istenen-sayida-asal-sayi.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
