Parametre Almayan Fonksiyonlar

--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
@@ -129,5 +129,8 @@
     <ClCompile Include="Döngüler\while-dongusu.cpp">
       <Filter>Source Files\Döngüler</Filter>
     </ClCompile>
+    <ClCompile Include="Fonksiyonlar\fonksiyonlar.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
