--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="Döngüler\n-elemanli-seri.cpp" />
     <ClCompile Include="Döngüler\sayi-tahmin-oyunu.cpp" />
     <ClCompile Include="Döngüler\while-dongusu.cpp" />
+    <ClCompile Include="Fonksiyonlar\fonksiyonlar-2.cpp" />
     <ClCompile Include="Fonksiyonlar\fonksiyonlar.cpp" />
     <ClCompile Include="Koşul İfadeleri\if-else.cpp" />
     <ClCompile Include="Koşul İfadeleri\switch-case-2.cpp" />
