--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="Fonksiyonlar\fonksiyonlar-2.cpp" />
     <ClCompile Include="Fonksiyonlar\fonksiyonlar-3.cpp" />
     <ClCompile Include="Fonksiyonlar\fonksiyonlar.cpp" />
+    <ClCompile Include="Fonksiyonlar\ornek-1.cpp" />
     <ClCompile Include="Koşul İfadeleri\if-else.cpp" />
     <ClCompile Include="Koşul İfadeleri\switch-case-2.cpp" />
     <ClCompile Include="Koşul İfadeleri\switch-case.cpp" />
