--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
@@ -162,5 +162,8 @@
     <ClCompile Include="Fonksiyonlar\ornek-2.cpp">
       <Filter>Source Files\Fonksiyonlar</Filter>
     </ClCompile>
+    <ClCompile Include="Diziler\diziler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
