Char Dizisi & String Dizisi

--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Diziler\char-dizisi.c" />
     <ClCompile Include="Diziler\diziler-for.cpp" />
     <ClCompile Include="Diziler\diziler.cpp" />
     <ClCompile Include="Döngüler\asal-carpan-bulma.cpp" />
