--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
@@ -171,5 +171,8 @@
     <ClCompile Include="Diziler\char-dizisi.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Diziler\char-dizisi.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
